--- a/materialer/introduktion/kode_fra_undervisning.ipynb
+++ b/materialer/introduktion/kode_fra_undervisning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "22019c25",
    "metadata": {},
    "outputs": [
@@ -26,11 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello wrold\n"
+      "HEY\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print('HEY')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,22 +44,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "075d25fa",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "True\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "dict"
+       "'String'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a = 3\n",
+    "b=3\n",
+    "c=5\n",
+    "d = 'String'\n",
+    "e = True\n",
+    "e\n",
+    "print(a)\n",
+    "print(e)\n",
+    "d\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,11 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9e5299d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# len()\n",
+    "\n",
+    "\n",
+    "len(d)\n",
+    "\n",
+    "# type()\n",
+    "\n",
+    "# type(e)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,23 +153,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41b19203",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7977855b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12'"
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'removeprefix',\n",
+       " 'removesuffix',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dir(str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,22 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "c3695aad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello12'"
+       "'eowapkpd12'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "'eowapkpd' + str(12)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,27 +301,18 @@
    "execution_count": null,
    "id": "97e1a5f8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 2 (837771590.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint('Hello ' + name)\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'if' statement on line 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def message(name):\n",
-    "    if name == 'Claus':\n",
-    "        print('Hello ' + name)\n",
+    "def login(name):\n",
+    "    if name == 'Sofus':\n",
+    "        print('You are in')\n",
     "    else:\n",
-    "        print('No NO NO') "
+    "        print('wrong name')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "7f3580c6",
    "metadata": {},
    "outputs": [
@@ -199,12 +320,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No NO NO\n"
+      "wrong name\n"
      ]
     }
    ],
    "source": [
-    "message(10)"
+    "login('Sofus')"
    ]
   },
   {
@@ -264,23 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "id": "25f7ddcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'l'"
+       "'o'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[-2]"
+    "a[4]"
    ]
   },
   {
@@ -295,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 55,
    "id": "acad4506",
    "metadata": {},
    "outputs": [
@@ -305,7 +426,7 @@
        "'hrllo 12'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "id": "5c0cd327",
    "metadata": {},
    "outputs": [],
@@ -335,23 +456,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "id": "9b9587a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'dk'"
+       "'.dk'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "h[-2:]"
+    "h[0:5]\n",
+    "h[-3:]"
    ]
   },
   {
@@ -379,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
