--- a/materialer/introduktion/string1.ipynb
+++ b/materialer/introduktion/string1.ipynb
@@ -24,12 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "def donuts(count):\n",
-    "    return ''"
+    "    if count >= 10:\n",
+    "        return 'Number of donuts: many'\n",
+    "    else:\n",
+    "        return f'Number of donuts: {count}'\n"
    ]
   },
   {
@@ -45,12 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def both_ends(s):\n",
-    "    return ''\n"
+    "    if len(s)<2:\n",
+    "        return ''\n",
+    "    return s[0:2] + s[-2:]\n"
    ]
   },
   {
@@ -70,12 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fix_start(s):\n",
-    "  return ''"
+    "    first = s[0]\n",
+    "    rest = s[1:].replace(first, '*')\n",
+    "\n",
+    "    \n",
+    "    return first + rest\n",
+    "\n"
    ]
   },
   {
@@ -94,17 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mix_up(a, b):\n",
-    "    return ''"
+    "    a_start = a[:2]\n",
+    "    b_start = b[:2]\n",
+    "\n",
+    "    new_a = b_start + a[2:]\n",
+    "    new_b = a_start + b[2:]\n",
+    "\n",
+    "    return new_a + ' ' + new_b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +149,7 @@
     "def main():\n",
     "    print ('donuts')\n",
     "    # Each line calls donuts, compares its result to the expected for that call.\n",
-    "    test(   donuts(5), 'Number of donuts: 4'  )\n",
+    "    test(   donuts(4), 'Number of donuts: 4'  )\n",
     "    test(   donuts(9), 'Number of donuts: 9'  )\n",
     "    test(  donuts(10), 'Number of donuts: many'  )\n",
     "    test(  donuts(99), 'Number of donuts: many'  )\n",
@@ -162,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -170,28 +186,28 @@
      "output_type": "stream",
      "text": [
       "donuts\n",
-      "  X  got:  expected: Number of donuts: 4\n",
-      "  X  got:  expected: Number of donuts: 9\n",
-      "  X  got:  expected: Number of donuts: many\n",
-      "  X  got:  expected: Number of donuts: many\n",
+      " OK  got: Number of donuts: 4 expected: Number of donuts: 4\n",
+      " OK  got: Number of donuts: 9 expected: Number of donuts: 9\n",
+      " OK  got: Number of donuts: many expected: Number of donuts: many\n",
+      " OK  got: Number of donuts: many expected: Number of donuts: many\n",
       "\n",
       "both_ends\n",
-      "  X  got:  expected: spng\n",
-      "  X  got:  expected: Helo\n",
+      " OK  got: spng expected: spng\n",
+      " OK  got: Helo expected: Helo\n",
       " OK  got:  expected: \n",
-      "  X  got:  expected: xyyz\n",
+      " OK  got: xyyz expected: xyyz\n",
       "\n",
       "fix_start\n",
-      "  X  got:  expected: ba**le\n",
-      "  X  got:  expected: a*rdv*rk\n",
-      "  X  got:  expected: goo*le\n",
-      "  X  got:  expected: donut\n",
+      " OK  got: ba**le expected: ba**le\n",
+      " OK  got: a*rdv*rk expected: a*rdv*rk\n",
+      " OK  got: goo*le expected: goo*le\n",
+      " OK  got: donut expected: donut\n",
       "\n",
       "mix_up\n",
-      "  X  got:  expected: pox mid\n",
-      "  X  got:  expected: dig donner\n",
-      "  X  got:  expected: spash gnort\n",
-      "  X  got:  expected: fizzy perm\n"
+      " OK  got: pox mid expected: pox mid\n",
+      " OK  got: dig donner expected: dig donner\n",
+      " OK  got: spash gnort expected: spash gnort\n",
+      " OK  got: fizzy perm expected: fizzy perm\n"
      ]
     }
    ],
@@ -225,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
