--- a/materialer/introduktion/string2.ipynb
+++ b/materialer/introduktion/string2.ipynb
@@ -18,13 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "63f5054b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def verbing(s):\n",
-    "  return s"
+    "  if len(s) < 3:\n",
+    "    return s\n",
+    "  elif s[-3:] == 'ing':\n",
+    "    return s + 'ly' \n",
+    "  return s + 'ing'"
    ]
   },
   {
@@ -45,13 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "e6a16b71",
    "metadata": {},
    "outputs": [],
    "source": [
     "def not_bad(s):\n",
-    "  return s"
+    "    not_index = s.find('not')\n",
+    "    bad_index = s.find('bad')\n",
+    "\n",
+    "    if not_index != -1 and bad_index != -1 and bad_index > not_index:\n",
+    "        return s[:not_index] + 'good' + s[bad_index + 3:]\n",
+    "    return s\n"
    ]
   },
   {
@@ -71,18 +80,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "859f4f88",
    "metadata": {},
    "outputs": [],
    "source": [
     "def front_back(a, b):\n",
-    "  return ''"
+    "    def split(s):\n",
+    "        mid = (len(s) + 1) // 2\n",
+    "        return s[:mid], s[mid:]\n",
+    "\n",
+    "    a_front, a_back = split(a)\n",
+    "    b_front, b_back = split(b)\n",
+    "\n",
+    "    return a_front + b_front + a_back + b_back\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "ee303a83",
    "metadata": {},
    "outputs": [],
@@ -99,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "71448dff",
    "metadata": {},
    "outputs": [],
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "b71c55f9",
    "metadata": {},
    "outputs": [
@@ -137,20 +153,20 @@
      "output_type": "stream",
      "text": [
       "verbing\n",
-      "  X  got: hail expected: hailing\n",
-      "  X  got: swiming expected: swimingly\n",
+      " OK  got: hailing expected: hailing\n",
+      " OK  got: swimingly expected: swimingly\n",
       " OK  got: do expected: do\n",
       "\n",
       "not_bad\n",
-      "  X  got: This movie is not so bad expected: This movie is good\n",
-      "  X  got: This dinner is not that bad! expected: This dinner is good!\n",
+      " OK  got: This movie is good expected: This movie is good\n",
+      " OK  got: This dinner is good! expected: This dinner is good!\n",
       " OK  got: This tea is not hot expected: This tea is not hot\n",
       " OK  got: It's bad yet not expected: It's bad yet not\n",
       "\n",
       "front_back\n",
-      "  X  got:  expected: abxcdy\n",
-      "  X  got:  expected: abcxydez\n",
-      "  X  got:  expected: KitDontenut\n"
+      " OK  got: abxcdy expected: abxcdy\n",
+      " OK  got: abcxydez expected: abcxydez\n",
+      " OK  got: KitDontenut expected: KitDontenut\n"
      ]
     }
    ],
@@ -162,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
